RESOLVED FIXED297377
[visionOS] Transition from fullscreen to dock isn't as smooth as it could be
https://bugs.webkit.org/show_bug.cgi?id=297377
Summary [visionOS] Transition from fullscreen to dock isn't as smooth as it could be
Jean-Yves Avenard [:jya]
Reported 2025-08-13 18:40:42 PDT
When we transition from fullscreen to dock, we switch from a AVSampleBufferDisplayLayer to an AVSampleBufferVideoRenderer. To transition between the two, we currently requires seeking into the video and re-enqueue all frames. This results in slight visual pause during the transition or the last frame of the old AVSBDL and the first visible frame in the AVSBVR to not match; same going the reverse. Now that we keep the decoded frames around, we could have the VideoMediaSampleRenderer directly enqueue the same decoded frame to both objects, eliminating the need to perform an internal seek and decodes lots of unnecessary frames.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-13 18:43:28 PDT
Jean-Yves Avenard [:jya]
Comment 2 2025-08-14 06:19:04 PDT
EWS
Comment 3 2025-08-15 01:35:28 PDT
Committed 298745@main (4187f71b1153): <https://commits.webkit.org/298745@main> Reviewed commits have been landed. Closing PR #49388 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.